--- a/SOPAW/searchstyle.css
+++ b/SOPAW/searchstyle.css
@@ -105,5 +105,5 @@ a[tag-link]:hover, a[search-link-embed]:hover {
 
 p[help-text] {
     font-size: 0.6em;
-    margin: 1.33em;
+    margin: 1.33333em 1.33333em 0 1.33333em;
 }
