--- a/SOPAW/searchstyle.css
+++ b/SOPAW/searchstyle.css
@@ -91,13 +91,13 @@ a[title-link]:focus, a[title-link]:hover {
     cursor: pointer;
 }
 
-a[tag-link], a[search-link-embed] {
+span[tag-link], a[search-link-embed] {
     color: #000;
     text-decoration: none;
     transition:font-weight 0.2s ease-in;
 }
 
-a[tag-link]:hover, a[search-link-embed]:hover {
+span[tag-link]:hover, a[search-link-embed]:hover {
     color: #777;
     cursor:pointer;
     font-weight: 700;
